reports/03-AR.log
Traceback (most recent call last):
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\ProgramData\Anaconda3\envs\libro-ec4301\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
modelo_ar1p = ArmaProcess.from_coeffs(arcoefs=[0.9])

fig = make_subplots(rows=1, cols=2, subplot_titles=('Simulación', 'Autocorrelación'))
graficar_simulacion(fig, modelo_ar1p, row=1, col=1)
graficar_autocorrelacion(fig, modelo_ar1p, row=1, col=2)
fig.update_layout(**opciones)
fig.show()´
------------------

[1;36m  Input [1;32mIn [3][1;36m[0m
[1;33m    fig.show()´[0m
[1;37m              ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid character '´' (U+00B4)

SyntaxError: invalid character '´' (U+00B4) (2586026460.py, line 7)

